fix cart overflow

--- a/gulp/blocks/cart/_cart.scss
+++ b/gulp/blocks/cart/_cart.scss
@@ -10,7 +10,6 @@
   }
 
   &__content-wrapper {
-    overflow-x: hidden;
     padding: 20px;
     background-color: $color-white;
     box-shadow: $box-shadow;
@@ -22,15 +21,11 @@
   }
 
   &__content {
-
-    @media (min-width: $screen-lg) {
-      padding: 10px;
-    }
-
+    overflow-x: hidden;
   }
 
   &__items-list {
-    padding-bottom: 20px;
+    padding: 10px 10px 20px;
   }
 
   &__item {
